added main taniguchi

--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -123,12 +123,13 @@
     <body>
 
         <div class="main-page-header">
+            <h1>事業内容</h1>
             <h1>SERVICE AND PRODUCTS</h1>
         </div>
 
         <div class="title-page">
             <img class="title-bg" src="../R/title-bar.png"/>
-            <h3>JAPAN METAL ROOF ASSOCIATION</h3>
+            <h3>日本金属屋根協会</h3>
         </div>
 
         <div class="services-container">
