--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -156,8 +156,8 @@
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/2.png"/>
                                 </div>
@@ -173,14 +173,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/1.png"/>
                                 </div>
@@ -196,14 +196,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/4.png"/>
                                 </div>
@@ -219,14 +219,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/5.png"/>
                                 </div>
@@ -242,14 +242,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/6.png"/>
                                 </div>
@@ -265,14 +265,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/7.png"/>
                                 </div>
@@ -294,8 +294,8 @@
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/8.png"/>
                                 </div>
@@ -311,14 +311,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
                 <div class="row" >
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                            <div class="info-row col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
+                            <div class="info-row col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="icon">
                                         <img src="../R/contacticons/9.png"/>
                                 </div>
@@ -337,14 +337,14 @@
     
                             </div>
                             
-                        <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
+                        <span class="hidden-xs hidden-sm col-md-2 col-lg-2"></span>
                         
     
                 </div>
 
             <div class="address-container">
 
-                <div class="row" ng-controller="HomeNewsController">
+                <div class="row">
                         <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
                         <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
                             <div class="thumbnail-container col-sm-6 col-md-4 lg-4">
@@ -354,7 +354,7 @@
                             <table>
                                 <tbody>
                                     <tr>
-                                        <td>Name of the location</td>
+                                        <td>本社</td>
                                     </tr>
                                     <tr>
                                         <td><img></td>
@@ -367,15 +367,15 @@
                                     <tbody>
                                         <tr>
                                             <td><img src="../R/addressbox/location.png"></td>
-                                            <td>Location Address</td>
+                                            <td>北海道滝川市本町2丁目3番5号　ＴＳビル1階</td>
                                         </tr>
                                         <tr>
                                             <td><img src="../R/addressbox/call.png"></td>
-                                            <td>Telephone number</td>
+                                            <td>0125-23-3725</td>
                                         </tr>
                                         <tr>
                                             <td><img src="../R/addressbox/fax.png"></td>
-                                            <td>FAX or alternative number</td>
+                                            <td>0125-23-2250</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -388,7 +388,7 @@
                                     <table>
                                         <tbody>
                                             <tr>
-                                                <td>Name of the location</td>
+                                                <td>札幌営業所</td>
                                             </tr>
                                             <tr>
                                                 <td><img></td>
@@ -401,15 +401,15 @@
                                             <tbody>
                                                 <tr>
                                                     <td><img src="../R/addressbox/location.png"></td>
-                                                    <td>Location Address</td>
+                                                    <td>北海道札幌市中央区北1条西15丁目1番3号　大通りハイム603号室</td>
                                                 </tr>
                                                 <tr>
                                                     <td><img src="../R/addressbox/call.png"></td>
-                                                    <td>Telephone number</td>
+                                                    <td>011-632-7600</td>
                                                 </tr>
                                                 <tr>
                                                     <td><img src="../R/addressbox/fax.png"></td>
-                                                    <td>FAX or alternative number</td>
+                                                    <td>011-632-7608</td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -422,7 +422,7 @@
                                         <table>
                                             <tbody>
                                                 <tr>
-                                                    <td>Name of the location</td>
+                                                    <td>北関東営業所</td>
                                                 </tr>
                                                 <tr>
                                                     <td><img></td>
@@ -435,15 +435,15 @@
                                                 <tbody>
                                                     <tr>
                                                         <td><img src="../R/addressbox/location.png"></td>
-                                                        <td>Location Address</td>
+                                                        <td>茨城県水戸市城南2丁目4番28号</td>
                                                     </tr>
                                                     <tr>
                                                         <td><img src="../R/addressbox/call.png"></td>
-                                                        <td>Telephone number</td>
+                                                        <td>029-229-2580</td>
                                                     </tr>
                                                     <tr>
                                                         <td><img src="../R/addressbox/fax.png"></td>
-                                                        <td>FAX or alternative number</td>
+                                                        <td>029-229-2581</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -465,7 +465,7 @@
                                     <table>
                                         <tbody>
                                             <tr>
-                                                <td>Name of the location</td>
+                                                <td>芦別営業所</td>
                                             </tr>
                                             <tr>
                                                 <td><img></td>
@@ -478,11 +478,11 @@
                                             <tbody>
                                                 <tr>
                                                     <td><img src="../R/addressbox/location.png"></td>
-                                                    <td>Location Address</td>
+                                                    <td>北海道芦別市本町1053番地</td>
                                                 </tr>
                                                 <tr>
                                                     <td><img src="../R/addressbox/call.png"></td>
-                                                    <td>Telephone number</td>
+                                                    <td>0124-23-3725</td>
                                                 </tr>
                                                 <tr>
                                                     <td><img src="../R/addressbox/fax.png"></td>
@@ -501,7 +501,7 @@
                                         <table>
                                             <tbody>
                                                 <tr>
-                                                    <td>Name of the location</td>
+                                                    <td>工場</td>
                                                 </tr>
                                                 <tr>
                                                     <td><img></td>
@@ -514,15 +514,15 @@
                                                 <tbody>
                                                     <tr>
                                                         <td><img src="../R/addressbox/location.png"></td>
-                                                        <td>Location Address</td>
+                                                        <td>北海道滝川市幸町3丁目4番18号</td>
                                                     </tr>
                                                     <tr>
                                                         <td><img src="../R/addressbox/call.png"></td>
-                                                        <td>Telephone number</td>
+                                                        <td>0125-23-1013</td>
                                                     </tr>
                                                     <tr>
                                                         <td><img src="../R/addressbox/fax.png"></td>
-                                                        <td>FAX or alternative number</td>
+                                                        <td>0125-23-1013</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
