--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -81,9 +81,12 @@
             
         </div>
 
-        <div class="footer">
+        <footer class="footer navbar navbar-default navbar-fixed-bottom">
+                <div class="container">
+                        <p class="footer-block">Place sticky footer content here.</p>
+                      </div>
 
-        </div>
+        </footer>
 
         <script>
             $(function(){
