gs menu started

--- a/public/partials/gs_contact.html
+++ b/public/partials/gs_contact.html
@@ -5,7 +5,9 @@
 
         </title>
 
-        <link rel="stylesheet" href="../CSS/gs_contact_styles.css"/>
+        <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_contact_styles.css"/>
+        <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css"/>
+        
     </head>
     <header>
         <div class="row">
