--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -91,35 +91,7 @@
         
     </div>
 
-    <div class="menu" ng-controller="redirectController">
-    
-        <nav id="main-menu" class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">トップページ</a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a ng-click="home()">事業内容 <span class="sr-only">(current)</span></a></li>
-                    <li><a ng-click="services()">会社概要</a></li>
-                    <li><a ng-click="company()">ニュース</a></li>
-                    <li><a ng-click="contact()">お問い合わせ</a></li>
-                </ul>
-                </div><!-- /.navbar-collapse -->
-            </div>
-        <!-- /.container-fluid -->
-        </nav>
-
-    </div>
+    <div w3-include-html="/partials/metalplatemenu.html"></div>
 
     </header>
     
@@ -400,6 +372,7 @@
 
         <script type="text/javascript" src="../scripts/jquery.cycle2.min.js"></script>
         <script src="../plugins/facebooklikeslider/js/jquery.bxslider.js"></script>
+        <script>w3.includeHTML();</script>
     </body>
 
     
