--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -7,56 +7,25 @@
 
         <link rel="stylesheet" href="../CSS/generalServiceStyles/home_gs_styles.css"/>
         <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css"/>
+        <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css"/>
+        
         
     </head>
     <header>
-        <!-- <div class="row">
-            <div class="top-info col-xs-offset-1 col-md-10 col-sm-10 col-xs-12 col-xs-offset-1">
-                <span class="top-description">Taniguchi General service limited company is a company specializing in real state.</span>
-                <div class="right-container">
-                <div class="info-container">
-                    <img src="../R/topsection/call.png" alt="call"/>
-                    <div class="divider"></div>
-                    <p class="right-text">0125-23-8170</p>
-                </div>
-
-                    <div class="info-container">
-                        <img src="../R/topsection/ic_location.png" alt="call"/>
-                        <div class="divider"></div>
-                        <p class="right-text">2 - 3, 5 Honcho, Takikawa-shi, Hokkaido<br>073-0021 TS Building 1F</p>
-                    </div>
-
-            </div>
-            </div>
-        </div> -->
-
-        <div class="row">
-            <div class="col-md-offset-1 col-md-5">
-                <span class="top-description">Taniguchi General service limited company is a company specializing in real state.</span>
-            </div>
-            <div class="top-info col-md-5">
-                    <div class="right-container">
-                 <div class="info-container">
-                    <img src="../R/topsection/call.png" alt="call"/>
-                    <div class="divider"></div>
-                    <p class="right-text">0125-23-8170</p>
-                </div>
-
-                    <div class="info-container">
-                        <img src="../R/topsection/ic_location.png" alt="call"/>
-                        <div class="divider"></div>
-                        <p class="right-text">2 - 3, 5 Honcho, Takikawa-shi, Hokkaido<br>073-0021 TS Building 1F</p>
-                    </div>
-                    </div>
-            </div>
-        </div>
-
-        <div w3-include-html="/partials/gs_menu.html"></div>
+            <div w3-include-html="/partials/gs_header.html"></div>
+            
+        
     </header>
     <body>
 
-
-
+        <script>
+            $(document).ready(function(){
+                $("#b").removeClass("active");
+                $("#c").removeClass("active");
+                $("#a").addClass("active");
+                
+            });
+        </script>
         <script>w3.includeHTML();</script>
     </body>
 </html>
