--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -27,7 +27,7 @@
               <div class="col-lg-10 col-md-10" style="padding: 0;" >
           <!-- Fixed navbar -->
               <nav class="menu-container navbar navbar-default navbar-fixed-top" style="position: relative; margin: 0;" >
-                  <div class="container" style="background: white; margin-left: 0px; padding-left:0px;">
+                  <div class="container col-lg-12 col-md-12" style="background: white; margin-left: 0px; padding-left:0px; padding-right: 0px;">
                     <div class="navbar-header">
                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -39,10 +39,10 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse" >
                       
-                      <ul class="nav navbar-nav navbar-right">
-                        <li id="a"><a href="#!/generalservice/home">Default</a></li>
-                        <li id="b"><a href="#!/generalservice/home">Static top</a></li>
-                        <li id="c" class="active"><a href="#!/generalservice/contact">Fixed top <span class="sr-only">(current)</span></a></li>
+                      <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
+                        <li id="a" class="menu-item"><a style="background: transparent;" href="#!/generalservice/home">Default</a></li>
+                        <li id="b" class="menu-item"><a style="background: transparent;" href="#!/generalservice/company">Static top</a></li>
+                        <li id="c" class="menu-item"><a style="background: transparent;" href="#!/generalservice/contact">Fixed top <span class="sr-only">(current)</span></a></li>
                       </ul>
                     </div><!--/.nav-collapse -->
                   </div>
