--- a/public/CSS/generalServiceStyles/gs_menu_styles.css
+++ b/public/CSS/generalServiceStyles/gs_menu_styles.css
@@ -4,3 +4,39 @@
   background-color: transparent;
   border-color: transparent;
 }
+
+.menu-item:hover{
+  background-color: yellow;
+  /* border: 1px solid black; */
+
+  -ms-transform: skew(20deg);
+  -webkit-transform: skew(20deg);
+  transform: skew(20deg);
+
+}
+
+.menu-item a:hover {
+  -ms-transform: skew(-20deg);
+  -webkit-transform: skew(-20deg);
+  transform: skew(-20deg);
+
+  background-color: transparent;
+}
+
+.active{
+  background-color: blue;
+  -ms-transform: skew(20deg);
+  -webkit-transform: skew(20deg);
+  transform: skew(20deg);
+}
+
+.active a{
+  -ms-transform: skew(-20deg);
+  -webkit-transform: skew(-20deg);
+  transform: skew(-20deg);
+}
+
+.active:hover{
+  background-color: blue;
+}
+
