--- a/public/partials/gs_owners.html
+++ b/public/partials/gs_owners.html
@@ -5,12 +5,10 @@
 
         </title>
 
-        <link rel="stylesheet" href="../CSS/generalServiceStyles/home_gs_styles.css"/>
+        <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_owners_styles.css"/>
         <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css"/>
         <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css"/>
         <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css"/>
-        <!-- bxSlider CSS file -->
-        <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
         
     </head>
     <header>
@@ -19,12 +17,8 @@
         
     </header>
     <body>
-        <div id="gs-home-slider">
-                <div class="bxslider">
-                        <div><img src="../R/article1.jpg" title="Funky roots"></div>
-                        <div><img src="../R/article2.jpg" title="The long and winding road"></div>
-                        <div><img src="../R/article3.jpg" title="Happy trees"></div>
-                </div>
+        <div class="gs-title">
+                OWNER OF RENTAL APARTMENT <br> APARTMENT HOUSE
 
         </div>
             
@@ -42,16 +36,7 @@
             });
 
             </script>
-            <script>
-                $(function(){
-                $('.bxslider').bxSlider({
-                    mode: 'fade',
-                    auto: true,
-                    pager: false,
-                    keyboardEnabled: true,
-                });
-                });
-            </script>
+            
             <!-- bxSlider Javascript file -->
             <script src="../plugins/facebooklikeslider/js/jquery.bxslider.js"></script>
     </body>
