--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -39,10 +39,10 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse" >
                       
-                      <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
-                        <li id="a" class="menu-item"><a style="background: transparent;" href="#!/generalservice/home">Default</a></li>
-                        <li id="b" class="menu-item"><a style="background: transparent;" href="#!/generalservice/company">Static top</a></li>
-                        <li id="c" class="menu-item"><a style="background: transparent;" href="#!/generalservice/contact">Fixed top <span class="sr-only">(current)</span></a></li>
+                      <ul class="nav navbar-nav navbar-right" style="margin-right: 200px;">
+                        <li class="menu-item"><a style="background: transparent;" href="#!/generalservice/home">Default</a></li>
+                        <li class="menu-item"><a style="background: transparent;" href="#!/generalservice/owners">Static top</a></li>
+                        <li class="menu-item"><a style="background: transparent;" href="#!/generalservice/contact">Fixed top <span class="sr-only">(current)</span></a></li>
                       </ul>
                     </div><!--/.nav-collapse -->
                   </div>
