--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -22,76 +22,7 @@
 </head>
 <header>
     
-    <div class="social">
-            <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-            <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
-                
-                <div class="col-xs-12 col-md-6 col-lg-6 col-sm-6" style="padding-right: 0px; padding-left: 0px;">
-                        
-                    <p class="secondaryText">有限会社谷口板金工業所は屋根・外壁工事を専門とする会社です。</p>    
-                
-                </div> 
-            
-                <div class="col-xs-12 col-md-6 col-lg-6 col-sm-6" style="padding-right: 0px; padding-left: 0px;"> 
-                    
-                        <div class="social-icons">
-                            <img src="../R/face_gray.png" alt="F">
-                        
-                        </div>
-                        
-                </div>
-
-            </div>         
-        <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-    </div>
-    
-    <div class="logo-header">
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-                
-            <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
-                    <div class="logos">
-                            <img class="logo-img" src="../R/Metalplatelogo.jpg">
-                            <img src="../R/title_logo.png">
-
-                    </div>
-                    
-            </div> 
-            
-            <div id="call-id" class="col-lg-2 col-md-2 col-sm-5 col-xs-12"> 
-                
-                    <div class="info-header">
-                        <img style="padding-left: 0px;" src="../R/topsection/call.png" alt="Phone:">
-
-                        <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px;">
-                            <h5>0125-23-3725</h5>
-                            <p>FAX 0125-23-2250</p>
-
-                        </div>
-                    
-                    </div>
-                    
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-10 col-xs-12" style="padding-right: 0px; padding-left: 0px;"> 
-                    
-                        <div class="info-header">
-                            <img src="../R/topsection/ic_location.png" alt="Location">
-
-                            <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px">
-                                    <h5>北海道滝川市本町2丁目3番5号</h5>
-                                    <p>ＴＳビル1階</p>
-    
-                                </div>
-                        
-                        </div>
-                        
-            </div>
-      
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-        
-    </div>
-
-    <div w3-include-html="/partials/metalplatemenu.html"></div>
+    <div w3-include-html="/partials/metalplateheader.html"></div>
 
     </header>
     
@@ -132,44 +63,40 @@
 
         <div class="options-section">
             
-            <div class="row">
-                <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-                <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
-                <div class="col-sm-6 col-md-4 lg-4">
-                  <div class="thumbnail">
+            <div class="row" style="max-width: 100%; margin: 0;">
+                <span class="col-lg-1 col-md-1 col-sm-2 hidden-xs" style="padding: 0; margin: 0"></span>
+                <div class="col-lg-10 col-md-10 col-sm-8 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding: 0px; ">
+                
+                  <div class="thumbnail col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="box-icon">
                         <img class="img-icon" src="../R/services_black.png">
                     </div>
                     <div class="caption" style="background-image: url('../R/service_content.jpg');">
-                      <h3 style="color: white; font-size: 45px;">事業内容</h3>
+                      <h3>事業内容</h3>
                       <p>...</p>
                       </div>
                   </div>
-                </div>
-                <div class="col-sm-6 col-md-4 lg-4">
-                    <div class="thumbnail">
+
+                    <div class="thumbnail col-lg-4 col-md-4 col-sm-4 col-xs-12">
                         <div class="box-icon">
                             <img class="img-icon" src="../R/company_black.png">
                         </div>
                       <div class="caption" style="background-image: url('../R/service_content2.jpg');">
-                        <h3 style="color: white; font-size: 45px;">会社概要</h3>
+                        <h3>会社概要</h3>
                         <p>...</p>
                          </div>
                     </div>
-                </div>
-                <div class="col-sm-6 col-md-4 lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail col-lg-4 col-md-4 col-sm-4 col-xs-12">
                         <div class="box-icon">
                             <img class="img-icon" src="../R/contact_black.png">
                         </div>
                       <div class="caption" style="background-image: url('../R/service_content3.jpg'); ">
-                        <h3 style="color: white; font-size: 45px;">お問い合わせ</h3>
+                        <h3>お問い合わせ</h3>
                         <p>...</p>
                          </div>
                     </div>
                 </div>
-                </div>
-                <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
+                <span class="col-lg-1 col-md-1 col-sm-2 hidden-xs" style="padding: 0; margin: 0"></span>
             </div>
         </div>
         
@@ -218,7 +145,7 @@
         </div>
         
         <div class="news-section">
-            <div class="title-company" style="width: 100%; margin-bottom: 80px;">
+            <div class="title-company" style="width: 100%;">
                 <h1><span class="section-title-bold">谷口板金</span><span class="section-title">NEWS</span></h1>
             </div>
 
