--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -39,6 +39,10 @@ h4{
     font-weight: bold;
 }
 
+.news-section .title-company{
+    margin-bottom: 80px;
+}
+
 .menu{
     background-color: #0C2043;
 }
@@ -397,6 +401,10 @@ p.about-text{
     position: relative;
 }
 
+body .container{
+    padding: 5px;
+}
+
 .bottom-box .map-container .map{
     border:0; 
     width: 100%;
@@ -407,6 +415,11 @@ p.about-text{
     right: 0;
     height: 85%;
     margin: auto;
+}
+
+.thumbnail .caption h3{
+    font-size: 45px;
+    color: white;
 }
 
 footer{
@@ -464,5 +477,47 @@ and (-webkit-min-device-pixel-ratio: 1) {
     #middle-article-box{
         padding-right: 0px;
         padding-left: 0px;
+    }
+}
+
+/* media querys for title sizes for xs screens */
+@media screen and (max-width: 768px){
+    .cycle-overlay h1{
+        font-size: 25px;
+    }
+
+    .cycle-overlay{
+        top: 0;
+        font-size: 14px;
+    }
+
+    .bottom-box{
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+
+    .bottom-box .map-container .map{
+        height: 100%;
+    }
+
+    .thumbnail .caption h3{
+        font-size: 28px;
+    }
+
+    .news-section{
+        padding-top: 0px;
+    }
+
+    .news-section .title-company{
+        margin-bottom: 40px;
+    }
+
+    .social .social-icons{
+        float: none;
+    }
+
+    .social .social-container{
+        text-align: center;
+        margin-top: 10px;
     }
 }
